Feature/Query holidays
